--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>AI Trend Tracker</title>
 </head>
 <body>
     <h1>Welcome to AI Trend Tracker</h1>
