move to github secs

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>Welcome to AI Trend Tracker</h1>
     <nav>
         <ul>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="top_articles.html">Top Articles</a></li>
+            <li><a href="top_articles.html">Top Research Articles</a></li>
+            <li><a href="news.html">News Headlines</a></li>
+            <li><a href="blogs.html">Top Blogs</a></li>
         </ul>
     </nav>
 </body>
