add font matter formatting

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 ---
 layout: default
 ---
-
+<style>
+    body {
+        zoom: 125%; /* Adjust the zoom level as per your requirement */
+    }
+</style>
 <!DOCTYPE html>
 <html lang="en">
 <head>
