--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
         <ul>
             <li><a href="top_articles.html">Top Research Articles</a></li>
             <li><a href="news.html">News Headlines</a></li>
-            <li><a href="blogs.html">Top Blogs</a></li>
+            <li><a href="blog.html">Top Blogs</a></li>
         </ul>
     </nav>
 </body>
