--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ layout: default
 </head>
 <body>
     <h1>Welcome to AI Trend Tracker</h1>
+    <p>All content curation and summarization is done via LLM. Even the underlying HTML you're reading is entirely AI generated!</p>
+    <p>Prompt management, evaluation, and parameter optimization orchestrated via <a href="https://freeplay.ai/">freeplay.ai</a>!</p>
     <nav>
         <ul>
             <li><a href="top_articles.html">Top Research Articles</a></li>
