--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@ layout: default
     <p>All content curation and summarization is done via LLM. Even the underlying HTML you're reading is entirely AI generated!</p>
     <p>Prompt management, evaluation, and parameter optimization orchestrated via <a href="https://freeplay.ai/">freeplay.ai</a>!</p>
     <nav>
+        <h2>Content Sections</h2>
         <ul>
             <li><a href="top_articles.html">Top Research Articles</a></li>
-            <li><a href="news.html">News Headlines</a></li>
+            <li><a href="news.html">Top News Headlines</a></li>
             <li><a href="blog.html">Top Blogs</a></li>
         </ul>
     </nav>
