Update HTML files

--- a/news.html
+++ b/news.html
@@ -1,61 +1,64 @@
 ---
-layout: default
----
-
-<!DOCTYPE html>
+    layout: default
+    ---
+    <style>
+        body {
+            zoom: 125%; /* Adjust the zoom level as per your requirement */
+        }
+    </style>
+    <!DOCTYPE html>
 <html>
 <head>
-<title>Top AI News Stories of the Week</title>
+  <title>Top AI News Stories of the Week</title>
 </head>
 <body>
-<h1>Top AI News Stories of the Week</h1>
-
-<h2>Title: Google DeepMind's Demis Hassabis Says Gemini Is a New Breed of AI</h2>
-<h3>Source: Wired</h3>
-<h3>Summary:</h3>
-<ul>
-<li>Google has announced Gemini, a new AI model that can process information in the form of text, audio, images, and video, making it a "multimodal" AI.</li>
-<li>Gemini is described as a "new breed" of AI that could lead to major breakthroughs in robotics and other projects.</li>
-<li>The initial version of Gemini is available through Google's chatbot Bard, with a more powerful version, Gemini Ultra, set to be released next year.</li>
-<li>Google is exploring how Gemini could be combined with robotics to physically interact with the world, and is also researching ways to improve the reasoning abilities of AI models.</li>
-</ul>
-<a href="https://www.wired.com/story/google-deepmind-demis-hassabis-gemini-ai/">Link to Article</a>
-
-<h2>Title: AI That Helps Us be More Human with Each Other</h2>
-<h3>Source: ReadWrite</h3>
-<h3>Summary:</h3>
-<ul>
-<li>Digital marketers have embraced AI for its efficiency in content creation, but this has resulted in a lack of human connection and homogeneity in content.</li>
-<li>AI-powered translation apps, like those from Google, are breaking down language barriers and enabling communication between different linguistic backgrounds.</li>
-<li>AI features in business tools like Salesforce and HubSpot help build complete customer profiles and assist in remembering important details.</li>
-<li>Wearable AI devices, such as Humane's AI Pin, allow users to keep their phones in their pockets and not miss out on important events or information.</li>
-<li>The potential of AI lies in its ability to augment human experiences, and there are positive signs that this is possible.</li>
-</ul>
-<a href="https://readwrite.com/ai-that-helps-us-be-more-human-with-each-other/">Link to Article</a>
-
-<h2>Title: The Role of AI and Machine Learning in Credit Score Improvement</h2>
-<h3>Source: ReadWrite</h3>
-<h3>Summary:</h3>
-<ul>
-<li>AI and machine learning are revolutionizing credit score improvement by offering personalized financial education and awareness.</li>
-<li>These technologies enhance credit analysis, providing accurate and efficient credit reports and personalized recommendations.</li>
-<li>Real-time fraud detection using machine learning models helps prevent unauthorized activities and protect credit scores.</li>
-<li>AI and ML tools can predict future credit score outcomes and suggest actionable steps for improvement.</li>
-<li>Financial institutions and fintech companies leverage machine learning to design tailored financial products based on an individual's needs.</li>
-</ul>
-<a href="https://readwrite.com/the-role-of-ai-and-machine-learning-in-credit-score-improvement/">Link to Article</a>
-
-<h2>Title: Google launches its largest and ‘most capable’ AI model, Gemini</h2>
-<h3>Source: ReadWrite</h3>
-<h3>Summary:</h3>
-<ul>
-<li>Google has launched its latest AI model, Gemini, which is being touted as its largest and most capable model yet.</li>
-<li>Gemini is the first model to outperform GPT-4 in various areas and is highly flexible, capable of running on data centers and mobile devices.</li>
-<li>The model comes in three sizes: Gemini Ultra for highly complex needs, Gemini Pro for a wide scope, and Gemini Nano for on-device tasks.</li>
-<li>Gemini is also the first model to surpass human experts in the Massive Multitask Language Understanding (MMLU) test.</li>
-<li>Google plans to license Gemini through Google Cloud and use it in consumer-facing Google AI apps. However, it will not be available in Europe or the UK due to regulatory hurdles.</li>
-</ul>
-<a href="https://readwrite.com/google-launches-its-largest-and-most-capable-ai-model-gemini/">Link to Article</a>
-
+  <h1>Top AI News Stories of the Week</h1>
+  
+  <h2>Title: With landmark AI Act, the EU takes the lead in regulating artificial intelligence</h2>
+  <h3>Source: Android Central</h3>
+  <h4>Summary:</h4>
+  <ul>
+    <li>The European Union has reached a preliminary agreement for the AI Act, which is the first successful attempt at AI regulation.</li>
+    <li>The AI Act aims to curb potential risks of advanced automation and misinformation, focusing on limiting malicious applications of AI such as predictive policing and manipulating human behavior.</li>
+    <li>Big tech companies will be targeted under the "high-risk systems" provisions, requiring compliance with transparency requirements and potential fines of up to 7% of revenue for non-compliance.</li>
+    <li>The AI Act still needs formal adoption, but its enactment is highly likely, although the provisions may not be enforceable for another year or two.</li>
+  </ul>
+  <a href="https://www.androidcentral.com/apps-software/eu-provisional-agreement-ai-act-regulate-artificial-intelligence">Read More</a>
+  
+  <h2>Title: My Surprisingly Unbiased Week With Elon Musk's 'Politically Biased' Chatbot</h2>
+  <h3>Source: Wired</h3>
+  <h4>Summary:</h4>
+  <ul>
+    <li>Some users have expressed concern that Grok, Elon Musk's AI chatbot, is politically liberal in its responses.</li>
+    <li>Musk has acknowledged the issue and stated that xAI will work to reduce Grok's political bias.</li>
+    <li>An analysis conducted by a data scientist found that while Grok has a strong libertarian streak, it also displays left-leaning tendencies.</li>
+    <li>It is challenging to completely remove bias from language models, and training them to be neutral can result in dull and neutered responses.</li>
+  </ul>
+  <a href="https://www.wired.com/story/fast-forward-elon-musk-grok-political-bias-chatbot/">Read More</a>
+  
+  <h2>Title: Open Source start-up Mistral receives $414 million in funding</h2>
+  <h3>Source: ReadWrite</h3>
+  <h4>Summary:</h4>
+  <ul>
+    <li>Open-source AI provider Mistral has closed its initial round of funding, raising a total of €450 million ($414 million) and reaching a valuation of $2 billion.</li>
+    <li>Leading investors in Mistral's Series A funding round include Andreessen Horowitz, Nvidia, and Salesforce.</li>
+    <li>Mistral aims to bring open-source AI models to the world and foster collaboration in the AI community.</li>
+    <li>Mistral's funding success highlights the growing presence of European AI startups, with Germany's Aleph Alpha also receiving significant investment this year.</li>
+    <li>The European Union has established clear rules for AI governance, including policies on facial recognition and ethical software deployment.</li>
+  </ul>
+  <a href="https://readwrite.com/open-source-start-up-mistral-receives-414-million-in-funding/">Read More</a>
+  
+  <h2>Title: NotebookLM publicly launches in the US using Google's new Gemini Pro AI model</h2>
+  <h3>Source: Android Central</h3>
+  <h4>Summary:</h4>
+  <ul>
+    <li>Google's NotebookLM, an AI-equipped notebook assistant, is now publicly available to users in the US.</li>
+    <li>The assistant uses Google's new Gemini Pro AI model and is designed to help users work smarter.</li>
+    <li>NotebookLM differs from other AI chatbots by only using sources or files uploaded by the user to provide answers and information.</li>
+    <li>Google warns that NotebookLM may still provide inaccurate responses, but it offers a more accurate way to get help from AI.</li>
+    <li>The public rollout of NotebookLM includes 16 new features based on feedback from early access testers, including the ability to save interactions as notes and suggested actions.</li>
+  </ul>
+  <a href="https://www.androidcentral.com/apps-software/notebooklm-us-launch-new-features">Read More</a>
+  
 </body>
 </html>
