--- a/blog.html
+++ b/blog.html
@@ -1,40 +1,43 @@
 ---
-layout: default
----
-<style>
-    body {
-        zoom: 125%; /* Adjust the zoom level as per your requirement */
-    }
-</style>
-<!DOCTYPE html>
+    layout: default
+    ---
+    <style>
+        body {
+            zoom: 125%; /* Adjust the zoom level as per your requirement */
+        }
+    </style>
+    <!DOCTYPE html>
 <html>
 <head>
 <title>Top AI Blog Posts of the Week</title>
 </head>
 <body>
 <h1>Top AI Blog Posts of the Week</h1>
-<h2>Title: Show HN: My related-posts finder script (with LLM and GPT4 enhancement)</h2>
-<h3>Source: Tomhazledine.com</h3>
+<h2>Article 1</h2>
+<h3>Title: Show HN: My related-posts finder script (with LLM and GPT4 enhancement)</h3>
+<h4>Source: Tomhazledine.com</h4>
 <h4>Summary:</h4>
 <ul>
 <li>The author used LLM embeddings to find related posts for their blog and GPT4 to explain why they're similar.</li>
-<li>Embeddings are a mathematical representation of the meaning of a piece of text and can be used for natural language search.</li>
-<li>The author automated the process of generating related posts using embeddings and GPT4, overcoming challenges such as API rate limits and prompt tweaking.</li>
-<li>The script reads markdown files, generates embeddings for each post, compares similarities, and uses GPT4 to generate explanations of why the posts are similar.</li>
-<li>The script is available on GitHub and has been used successfully on the author's blog.</li>
+<li>Embeddings are a way to make LLMs actually useful without any concerns about "hallucination" or incorrect content.</li>
+<li>The author tried manual approaches and leaning on CMS features to generate related posts in the past, but found limitations and difficulties.</li>
+<li>Embeddings are a mathematical representation of the meaning of text and can be used for natural language search and calculating relations between content.</li>
+<li>The author developed a node script that reads markdown files, generates embeddings, compares similarities, and uses GPT4 to generate explanations of why posts are similar.</li>
 </ul>
-<p><a href="https://tomhazledine.com/llm-related-posts/">Link to article</a></p>
+<a href="https://tomhazledine.com/llm-related-posts/">Read More</a>
 
-<h2>Title: Intel Neural-Chat-7B Model Achieves Top Ranking on LLM Leaderboard</h2>
-<h3>Source: Intel.com</h3>
+<h2>Article 2</h2>
+<h3>Title: Intel Neural-Chat-7B Model Achieves Top Ranking on LLM Leaderboard</h3>
+<h4>Source: Intel.com</h4>
 <h4>Summary:</h4>
 <ul>
 <li>The Intel neural-chat-7b model has achieved the #1 ranking for 7-billion-parameter models on the Hugging Face Open LLM Leaderboard.</li>
-<li>This model is the foundation for the NeuralChat chatbot available within Intel Extension for Transformers, and it can be deployed to a wide range of compute platforms.</li>
-<li>The model achieved comparable accuracy scores to models 2-3x larger, making it a highly efficient and effective choice.</li>
-<li>The team used supervised fine-tuning and a novel approach called Direct Preference Optimization (DPO) to achieve the competitive benchmark score.</li>
-<li>The blog post provides a walkthrough example for using the model for inference and offers resources for fine-tuning, customizing, and optimizing the NeuralChat chatbot.</li>
+<li>The model achieved comparable accuracy scores to models 2-3x larger, making it suitable for deployment on a wide range of compute platforms.</li>
+<li>The model is based on the Mistral-7B-v0.1 transformer model from Mistral AI and was fine-tuned using Intel Extension for Transformers with a supervised fine-tuning process.</li>
+<li>Attaining the competitive benchmark score required a novel approach called direct preference optimization (DPO), which provides human preference feedback for training data.</li>
+<li>The model can be used for inference by installing the proper libraries, loading the model, and performing inference, with examples available in the Intel Extension for Transformers GitHub repo.</li>
 </ul>
-<p><a href="https://community.intel.com/t5/Blogs/Tech-Innovation/Artificial-Intelligence-AI/Intel-neural-chat-7b-Model-Achieves-Top-Ranking-on-LLM/post/1549386">Link to article</a></p>
+<a href="https://community.intel.com/t5/Blogs/Tech-Innovation/Artificial-Intelligence-AI/Intel-neural-chat-7b-Model-Achieves-Top-Ranking-on-LLM/post/1549386">Read More</a>
+
 </body>
 </html>
