--- a/news.html
+++ b/news.html
@@ -13,52 +13,53 @@
 </head>
 <body>
   <h1>Top AI News Stories of the Week</h1>
-  
-  <h2>Title: With landmark AI Act, the EU takes the lead in regulating artificial intelligence</h2>
+
+  <h2>With landmark AI Act, the EU takes the lead in regulating artificial intelligence</h2>
   <h3>Source: Android Central</h3>
   <h4>Summary:</h4>
   <ul>
-    <li>The European Union has reached a preliminary agreement for the AI Act, which is the first successful attempt at AI regulation.</li>
-    <li>The AI Act aims to curb potential risks of advanced automation and misinformation, focusing on limiting malicious applications of AI such as predictive policing and manipulating human behavior.</li>
-    <li>Big tech companies will be targeted under the "high-risk systems" provisions, requiring compliance with transparency requirements and potential fines of up to 7% of revenue for non-compliance.</li>
-    <li>The AI Act still needs formal adoption, but its enactment is highly likely, although the provisions may not be enforceable for another year or two.</li>
+    <li>The European Union has reached a preliminary agreement on the AI Act, the world's first set of rules governing the use of AI.</li>
+    <li>The AI Act aims to regulate the use of AI to curb potential risks of advanced automation and misinformation.</li>
+    <li>The legislation targets malicious applications of AI, such as predictive policing, image scraping for facial recognition, and manipulating human behavior.</li>
+    <li>Big tech companies will have to comply with transparency requirements, share technical documentation, and provide detailed summaries of content used for training.</li>
+    <li>The AI Act is expected to be formally ratified and adopted by the EU, but its enforceability is not expected for another 12 to 24 months.</li>
   </ul>
   <a href="https://www.androidcentral.com/apps-software/eu-provisional-agreement-ai-act-regulate-artificial-intelligence">Read More</a>
-  
-  <h2>Title: My Surprisingly Unbiased Week With Elon Musk's 'Politically Biased' Chatbot</h2>
+
+  <h2>My Surprisingly Unbiased Week With Elon Musk's 'Politically Biased' Chatbot</h2>
   <h3>Source: Wired</h3>
   <h4>Summary:</h4>
   <ul>
-    <li>Some users have expressed concern that Grok, Elon Musk's AI chatbot, is politically liberal in its responses.</li>
-    <li>Musk has acknowledged the issue and stated that xAI will work to reduce Grok's political bias.</li>
-    <li>An analysis conducted by a data scientist found that while Grok has a strong libertarian streak, it also displays left-leaning tendencies.</li>
-    <li>It is challenging to completely remove bias from language models, and training them to be neutral can result in dull and neutered responses.</li>
+    <li>Elon Musk's AI company xAI has released a chatbot called Grok, which is intended to be less politically biased than OpenAI's ChatGPT.</li>
+    <li>Some users have raised concerns about Grok's political leanings, as it has been observed to give answers that align with left-leaning views.</li>
+    <li>Musk has acknowledged the issue and stated that xAI will work to reduce Grok's political bias in the future.</li>
+    <li>An analysis of Grok's responses found that it exhibits a strong libertarian streak but also leans left on certain topics.</li>
+    <li>It is challenging to remove bias from AI models, and even seemingly neutral training data can produce biased outputs.</li>
   </ul>
   <a href="https://www.wired.com/story/fast-forward-elon-musk-grok-political-bias-chatbot/">Read More</a>
-  
-  <h2>Title: Open Source start-up Mistral receives $414 million in funding</h2>
-  <h3>Source: ReadWrite</h3>
+
+  <h2>Sam Altman’s Weird Eyeball Scanning Crypto Tech Comes to Minecraft</h2>
+  <h3>Source: Gizmodo.com</h3>
   <h4>Summary:</h4>
   <ul>
-    <li>Open-source AI provider Mistral has closed its initial round of funding, raising a total of €450 million ($414 million) and reaching a valuation of $2 billion.</li>
-    <li>Leading investors in Mistral's Series A funding round include Andreessen Horowitz, Nvidia, and Salesforce.</li>
-    <li>Mistral aims to bring open-source AI models to the world and foster collaboration in the AI community.</li>
-    <li>Mistral's funding success highlights the growing presence of European AI startups, with Germany's Aleph Alpha also receiving significant investment this year.</li>
-    <li>The European Union has established clear rules for AI governance, including policies on facial recognition and ethical software deployment.</li>
+    <li>Worldcoin, Sam Altman's cryptocurrency venture, is integrating its verification services into popular apps like Reddit, Discord, Shopify, Mercado Libre, Telegram, and Minecraft.</li>
+    <li>This integration is part of Altman's World ID 2.0, which aims to be a "human passport for the internet."</li>
+    <li>Users will be able to verify their existing accounts and use World ID as a sign-in method for a more seamless experience.</li>
+    <li>Worldcoin's vision is to become the default verification system for the internet and redistribute wealth to the people.</li>
+    <li>Minecraft's integration with Worldcoin is notable, as it previously removed Bitcoin payments but could potentially include cryptocurrency in the future.</li>
   </ul>
-  <a href="https://readwrite.com/open-source-start-up-mistral-receives-414-million-in-funding/">Read More</a>
-  
-  <h2>Title: NotebookLM publicly launches in the US using Google's new Gemini Pro AI model</h2>
-  <h3>Source: Android Central</h3>
+  <a href="https://gizmodo.com/worldcoin-sam-altman-eye-scan-crypto-minecraft-1851096041">Read More</a>
+
+  <h2>OpenAI will pay to train its models on Business Insider and Politico articles</h2>
+  <h3>Source: Engadget</h3>
   <h4>Summary:</h4>
   <ul>
-    <li>Google's NotebookLM, an AI-equipped notebook assistant, is now publicly available to users in the US.</li>
-    <li>The assistant uses Google's new Gemini Pro AI model and is designed to help users work smarter.</li>
-    <li>NotebookLM differs from other AI chatbots by only using sources or files uploaded by the user to provide answers and information.</li>
-    <li>Google warns that NotebookLM may still provide inaccurate responses, but it offers a more accurate way to get help from AI.</li>
-    <li>The public rollout of NotebookLM includes 16 new features based on feedback from early access testers, including the ability to save interactions as notes and suggested actions.</li>
+    <li>OpenAI has entered into a partnership with German publisher Axel Springer to use its news articles to train its AI models.</li>
+    <li>The deal is worth tens of millions of euros over the next three years.</li>
+    <li>OpenAI aims to provide people with new ways to access quality, real-time news content through its AI tools.</li>
+    <li>Axel Springer will provide OpenAI with current news articles and archives from all its brands, which will be used to train OpenAI's large language models.</li>
+    <li>In return, OpenAI will attribute and link the articles in ChatGPT's responses, and Axel Springer can use OpenAI's technology to improve its own products.</li>
   </ul>
-  <a href="https://www.androidcentral.com/apps-software/notebooklm-us-launch-new-features">Read More</a>
-  
+  <a href="https://www.engadget.com/openai-will-pay-to-train-its-models-on-business-insider-and-politico-articles-200327559.html">Read More</a>
 </body>
 </html>
