fix font matter formatter

--- a/blog.html
+++ b/blog.html
@@ -13,34 +13,29 @@ layout: default
 </head>
 <body>
 <h1>Top AI Blog Posts of the Week</h1>
-<h2>Title: Article 1</h2>
-<h3>Source: Source 1</h3>
+<h2>Title: Show HN: My related-posts finder script (with LLM and GPT4 enhancement)</h2>
+<h3>Source: Tomhazledine.com</h3>
 <h4>Summary:</h4>
 <ul>
-<li>Summary point 1</li>
-<li>Summary point 2</li>
-<li>Summary point 3</li>
+<li>The author used LLM embeddings to find related posts for their blog and GPT4 to explain why they're similar.</li>
+<li>Embeddings are a way to make LLMs useful for natural language search without the problem of "hallucination" or incorrect content.</li>
+<li>The author tried a manual approach and leaning on CMS features to generate related posts in the past but found limitations and issues with both methods.</li>
+<li>Embeddings are vectors that represent the meaning of text and can be used to calculate the similarity between different pieces of content.</li>
+<li>The author developed a node script that reads markdown files, generates embeddings, and uses GPT4 to generate explanations for the similarity of posts.</li>
 </ul>
-<a href="link_to_article_1">Read More</a>
+<a href="https://tomhazledine.com/llm-related-posts/">Read More</a>
 
-<h2>Title: Article 2</h2>
-<h3>Source: Source 2</h3>
+<h2>Title: Intel Neural-Chat-7B Model Achieves Top Ranking on LLM Leaderboard</h2>
+<h3>Source: Intel.com</h3>
 <h4>Summary:</h4>
 <ul>
-<li>Summary point 1</li>
-<li>Summary point 2</li>
-<li>Summary point 3</li>
+<li>The Intel neural-chat-7b model has achieved the #1 ranking for 7-billion-parameter models on the Hugging Face Open LLM Leaderboard.</li>
+<li>The model achieved comparable accuracy scores to models 2-3x larger, making it suitable for deployment on a wide range of compute platforms.</li>
+<li>The model is based on the Mistral-7B-v0.1 transformer model from Mistral AI, which achieved competitive benchmark results as a small LLM with a large context window.</li>
+<li>The team used supervised fine-tuning and direct preference optimization (DPO) to attain the competitive benchmark score.</li>
+<li>Intel Extension for Transformers and Intel Neural Compressor are available for fine-tuning, customizing, and optimizing the NeuralChat chatbot.</li>
 </ul>
-<a href="link_to_article_2">Read More</a>
+<a href="https://community.intel.com/t5/Blogs/Tech-Innovation/Artificial-Intelligence-AI/Intel-neural-chat-7b-Model-Achieves-Top-Ranking-on-LLM/post/1549386">Read More</a>
 
-<h2>Title: Article 3</h2>
-<h3>Source: Source 3</h3>
-<h4>Summary:</h4>
-<ul>
-<li>Summary point 1</li>
-<li>Summary point 2</li>
-<li>Summary point 3</li>
-</ul>
-<a href="link_to_article_3">Read More</a>
 </body>
 </html>
